--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <div class="clear-fix">
             <ul class="list-group float-left">
-                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item"></li>
                 <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Morbi leo risus</li>
-                <li class="list-group-item">Porta ac consectetur ac</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item"></li>
+                <li class="list-group-item"></li>
+                <li class="list-group-item"></li>
             </ul>
 
 
@@ -37,7 +37,7 @@
 
         <div class="results">
             <div class="card">
-                <div class="card-body">
+                <div class="card-body weatherDetails">
                   <p>This is some text within a card body.</p>
                   <p>This is some text within a card body.</p>
                   <p>This is some text within a card body.</p>
@@ -46,7 +46,7 @@
                 </div>
             </div>
         </div>
-
+        <h2>5-Day Forcast: </h2>
         <div class="card-group fiveDay">
             <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
                 <div class="card-body">
