Append important weather information to the page, based on the location entered

--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
 
         <div class="results">
             <div class="card">
-                <div class="card-body weatherDetails">
-                  <p>This is some text within a card body.</p>
-                  <p>This is some text within a card body.</p>
-                  <p>This is some text within a card body.</p>
-                  <p>This is some text within a card body.</p>
-                  <p>This is some text within a card body.</p>
+                <div class="card-body" id="weatherDetails">
+
                 </div>
             </div>
         </div>
