--- a/index.html
+++ b/index.html
@@ -9,79 +9,41 @@
     <link rel="stylesheet" type="text/css" src="style.css">
 </head>
 <body>
-    <header>
-        <!-- bootstrap weather dashboard -->
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand">Weather Dashboard</a><span style = "color: white"><h1 style="font-size: 2em; font-weight: normal;">Search for Weather information by City</h1></span>
-            <form class="form-inline">
-              <input class="form-control mr-sm-2" id="cityName" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" id="searchCity" type="submit">Search</button>
-            </form>
-          </nav>
-    </header>
+
+    <div class="container-fluid" style="width: 100%; margin-right: -20px">
+        <header>
+            <!-- bootstrap weather dashboard --> 
+            <nav class="navbar navbar-dark bg-dark">
+                <a class="navbar-brand">Weather Dashboard</a><span style = "color: white"><h1 style="font-size: 2em; font-weight: normal;">Search for Weather information by City</h1></span>
+                <form class="form-inline">
+                <input class="form-control mr-sm-2" id="cityName" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" id="searchCity" type="submit">Search</button>
+                </form>
+            </nav>
+        </header>
 
 
-    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <div class="results">
+                    <div class="card">
+                        <div class="card-body" id="weatherDetails">
 
-        <div class="clear-fix">
-            <ul class="list-group float-left">
-                <li class="list-group-item"></li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item"></li>
-                <li class="list-group-item"></li>
-                <li class="list-group-item"></li>
-            </ul>
-
-
-        </div>
-
-        <div class="results">
-            <div class="card">
-                <div class="card-body" id="weatherDetails">
-
-                </div>
-            </div>
-        </div>
-        <h2>5-Day Forcast: </h2>
-        <div class="card-group fiveDay">
-            <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example </p>
-                </div>
-            </div>
-                <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Primary card title</h5>
-                        <p class="card-text">Some quick example</p>
+                        </div>
                     </div>
                 </div>
-            <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example </p>
-                </div>
-            </div>
-            <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example </p>
-                </div>
-            </div>
-            <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Primary card title</h5>
-                    <p class="card-text">Some quick example </p>
+                <h2>5-Day Forcast: </h2>
+                <div class= "row" id="fiveDayRendered">
+
                 </div>
             </div>
         </div>
-
 
     </div>
 
     
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="stylescript.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </body>
 </html>
